--- a/styles/index.css
+++ b/styles/index.css
@@ -132,6 +132,7 @@ a {
 
 .footer {
     margin-top: 35px;
+    width: 100%;
     padding: 1rem 2rem;
     background-color: #620D87;
     color: white;
