--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,8 +1,9 @@
 .grid-container {
-    width: 95%;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 15px;
+    margin: 25px;
 }
 .grid-item {
     background-color: white;
@@ -19,4 +20,13 @@ h2 {
 img {
     width:100%;
     border-radius: 10px;
+}
+.grid-item a {
+    color:#620D87;
+}
+.grid-item p {
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.footer {
 }
