--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Montserrat", Arial;
@@ -27,15 +27,17 @@ body {
     color: white;
     text-decoration: none;
     margin-left: 1rem;
-    padding: 30px;
+    padding: 10px 15px;
     border-radius: 0px 0px 25px 25px;
 }
 
 .navbar a:hover {
     background-color: #620D87;
 }
-.logo {
-    width: 30%;
+
+.logo img {
+    width: 50%;
+    max-width: 150px;
 }
 
 /* Hero section */
@@ -43,36 +45,43 @@ body {
     color: white;
     text-align: center;
     margin: 0 auto;
-} 
-#videoui {
-    width:50%;
-    border-radius: 20px 0px 0px 20px;
-    float: right;   
 }
+
+#videoui {
+    width: 50%;
+    border-radius: 20px 0px 0px 20px;
+    float: right;
+}
+
 #container {
     text-align: center;
     justify-content: center;
     height: 550px;
 }
+
 .hero h1 {
     font-size: 3rem;
     padding-top: 50px;
 }
+
 .bottom {
     margin-top: 50px;
 }
+
 .button1 {
     width: 200px;
     font-size: 1.2rem;
     background: #620D87;
     border-radius: 500px;
-    padding: 15px 30px 15px 30px;
+    padding: 15px 30px;
 }
+
 .button1:hover {
     background: #9522c7;
 }
+
 a {
-    color:white;
+    color: white;
     text-decoration: none;
 }
 
@@ -96,19 +105,22 @@ a {
 .feature-item h3 {
     margin-bottom: 0.5rem;
 }
+
 .icon {
     margin-bottom: 20px;
-    width:60px;
+    width: 60px;
 }
-/* Hero 2 section */
+
+/* Hero2 section */
 .hero2 {
-    display:grid;
+    display: grid;
     grid-template-rows: 350px 450px;
     justify-content: center;
     color: white;
     text-align: center;
     margin: 0 auto;
-} 
+}
+
 .hero2 h1 {
     font-size: 3rem;
 }
@@ -117,19 +129,19 @@ a {
     grid-row: 2 / 3;
     height: 300px;
 }
+
 .services {
     height: 300px;
     margin-top: 40px;
 }
+
 #computer {
     height: 400px;
-    position:absolute;
+    position: absolute;
     z-index: -1;
 }
 
-
 /* Footer */
-
 .footer {
     margin-top: 35px;
     width: 100%;
@@ -137,4 +149,90 @@ a {
     background-color: #620D87;
     color: white;
     text-align: center;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .navbar a {
+        padding: 15px;
+    }
+    #videoui {
+        width: 100%;
+        float: none;
+    }
+    .hero h1 {
+        font-size: 2rem;
+    }
+    .hero p {
+        padding: 20px;
+    }
+    .button1 {
+        width: 160px;
+        font-size: 1.1rem;
+    }
+
+    .features {
+        grid-template-columns: 1fr;
+        padding: 1rem;
+    }
+
+    .hero2 {
+        grid-template-rows: auto;
+    }
+
+    #contain {
+        display: none;
+    }
+
+    .services {
+        width: 100%;
+    }
+
+    #computer {
+        display: none;
+    }
+
+    #container {
+        height: 350px;
+    }
+}
+
+@media (max-width: 480px) {
+    .hero h1 {
+        font-size: 1.8rem;
+    }
+
+    .button1 {
+        width: 140px;
+        font-size: 1rem;
+    }
+    .features {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .icon {
+        width: 50px;
+    }
+
+    .services {
+        height: 200px;
+    }
+
+    #contain img {
+        width: 90%;
+        height: auto;
+    }
+    .hero2 {
+        margin: 20px;
+    }
+    .hero2 h1 {
+        font-size: 30px;
+    }
 }
