--- a/styles/about.css
+++ b/styles/about.css
@@ -35,3 +35,19 @@
     position: fixed;
     bottom:0;
 }
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+    .team {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        margin-bottom: 100px;
+    }
+    .member {
+        margin: 0 auto;
+    }
+    .footer {
+        position: relative;
+        bottom: 0px;
+    }
+}
