--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -65,3 +65,9 @@ h1 {
   text-align: center;
   margin-bottom:30px;
 }
+@media (max-width: 768px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
