--- a/styles/post.css
+++ b/styles/post.css
@@ -73,3 +73,21 @@ h2 {
 .recommendation a {
     color:#620D87;
 }
+@media (max-width: 768px) {
+    .grid-container {
+      display: grid;
+      grid-template-columns: 1fr;
+      width: 100%;
+      margin: 0 auto;
+    }
+    .container {
+        width: 90%;
+    }
+    iframe {
+        width: 100%;
+    }
+    .side-container {
+        width: 90%;
+        margin: 0 auto;
+    }
+  }
