--- a/styles/services.css
+++ b/styles/services.css
@@ -50,5 +50,36 @@ h1 {
 .icon {
     width: 20px;
 }
-
-
+@media (max-width: 768px) {
+    .grid-steps {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 90%;
+        margin: 0 auto;
+    }
+    .serviced {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+        height: 770px;
+        margin-bottom: 100px;
+        margin: 10px;
+        width: 90%;
+        height: auto;
+        margin: 0 auto;
+    }
+    .step {
+        padding: 10px;
+    }
+    .servicio {
+        margin: 0 auto;
+    }
+    h1 {
+        font-size: 25px;
+        margin-bottom: 20px;
+    }
+    .footer {
+        position: relative;
+        bottom: 0px;
+    }
+}
