--- a/styles/about.css
+++ b/styles/about.css
@@ -16,6 +16,7 @@
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 19px;
+    margin: 0 auto;
 }
 .member h2 {
     margin-top: 0;
