--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,9 +1,10 @@
 .grid-container {
-    width: 100%;
+    width: 90%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 15px;
     margin: 25px;
+    margin: 0 auto;
 }
 .grid-item {
     background-color: white;
