--- a/styles/about.css
+++ b/styles/about.css
@@ -1,54 +1,79 @@
-
-.team {
+.container {
+    margin-top: 40px;
+    width: 100%;
+    padding: 25px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    height: 100%;
-    margin: 0 auto;
-    justify-content: center;
+    grid-template-columns: 1fr 1fr;
+    color:white;
+}
+.text-container {
+    width: 100%;
+}
+.image-container img {
+    width: 100%;
+    border-radius: 25px;
+}
+.text {
+    padding: 50px;
+}
 
-}
-.member {
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    width: 340px;
+/* Banner */
+.banner {
+    position: relative;
+    width: 100%;
+    height: 300px; /* Ajusta la altura del banner */
+    background-image: url('https://cdn.dribbble.com/userupload/14108396/file/original-46845cd257ba3768bb9f8c28029cb4e3.png?resize=752x'); /* Cambia esta URL por la de tu imagen */
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
     text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 19px;
-    margin: 0 auto;
-}
-.member h2 {
-    margin-top: 0;
-}
-.team-pic {
-    border-radius: 150px;
-    object-fit: cover;
-    width: 230px;
-    height: 230px;
-    margin-bottom: 20px;
-}
-.mail {
-    font-style: oblique;
-    color: #620D87;
-}
-.footer {
-    position: fixed;
-    bottom:0;
+    font-family: Arial, sans-serif;
+  }
+
+  .banner::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Oscurece la imagen para mejorar la visibilidad del texto */
+    z-index: 1;
+  }
+
+  .banner-text {
+    position: relative;
+    z-index: 2; /* Asegura que el texto esté encima de la superposición */
+  }
+
+  .banner-text h1 {
+    font-size: 2.5rem;
+    margin: 0;
+  }
+
+  .banner-text p {
+    font-size: 1.2rem;
+    margin: 10px 0 0;
+  }
+/* END BANNER */
+
+h2 {
+    padding: 25px;
 }
 /* Media Queries for Responsiveness */
-@media (max-width: 768px) {
-    .team {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 20px;
-        margin-bottom: 100px;
-    }
-    .member {
-        margin: 0 auto;
-    }
+@media (max-width: 760px) {
     .footer {
         position: relative;
         bottom: 0px;
+    }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .container h1 {
+      margin-bottom: 30px;
     }
 }
