--- a/styles/index.css
+++ b/styles/index.css
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* Apply global box-sizing border-box to all elements */
 * {
-    margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    margin: 0; /* Ensure no margin is applied anywhere */
+    box-sizing: border-box; /* Ensures padding and borders are included in width/height */
     font-family: "Montserrat", Arial;
 }
-
+html, body {
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+}
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: black;
+    background: rgb(44,39,45);
+background: linear-gradient(0deg, rgba(44,39,45,1) 0%, rgba(0,0,0,1) 100%);
 }
 
 /* Navigation styles */
@@ -27,7 +31,7 @@ body {
     color: white;
     text-decoration: none;
     margin-left: 1rem;
-    padding: 10px 15px;
+    padding: 15px 15px;
     border-radius: 0px 0px 25px 25px;
 }
 
@@ -48,9 +52,10 @@ body {
 }
 
 #videoui {
-    width: 50%;
-    border-radius: 20px 0px 0px 20px;
+    width: 650px;
+    border-radius: 20px;
     float: right;
+    margin-right: 40px;
 }
 
 #container {
@@ -144,8 +149,7 @@ a {
 /* Footer */
 .footer {
     margin-top: 35px;
-    width: 100%;
-    padding: 1rem 2rem;
+    padding: 5px;
     background-color: #620D87;
     color: white;
     text-align: center;
