--- a/styles/calculadora.css
+++ b/styles/calculadora.css
@@ -1,8 +1,21 @@
+h1 {
+    color: white;
+    text-align: center;
+    margin-bottom: 25px;
+}
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    justify-content: center;
+}
 .container p {
     font-style: oblique;
+
 }
 /* Contenedor principal del formulario */
 form {
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -10,11 +23,8 @@ form {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-    width: 100%;
     max-width: 500px;
-    margin: 0 auto;
     color: white;
-    text-align: left;
     align-items: center;
 }
 
@@ -121,7 +131,14 @@ input[type="checkbox"]:checked::after {
     text-align: center;
     color: #ff9900;
     margin-bottom: 20px;
+    width: 40%;
 }
+/*.right-container {
+    width: 40%;
+    background-image: url("paper.gif");
+    background-color: #cccccc;
+    border-radius: 25px;
+} */
 #additionalText {
     font-size: 15px;
     font-weight: 500;
@@ -138,5 +155,10 @@ input[type="checkbox"]:checked::after {
 
     label, input, select, button {
         font-size: 14px;
+    }
+    h1 {
+        font-size: 35px;
+        padding: 15px;
+    
     }
 }
