--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,7 +10,6 @@
 }
 .side-menu {
     width: 30%;
-
 }
 .calc {
     padding: 25px;
@@ -28,6 +27,10 @@
 }
 .side-menu h1 {
     font-size: 20px;
+}
+.side-menu p {
+    font-size: 14px;
+    font-style: italic;
 }
 hr {
     margin: 50px 0px 50px 0px;
@@ -57,6 +60,9 @@ input, textarea {
 }
 textarea {
     height: 180px;
+}
+.calendar {
+    overflow:hidden;
 }
 
 button {
